# OpenVic-Dataloader

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CMakeLists.txt  CMakePresets.json  COPYRIGHT  LICENSE  README.md  SConstruct  pyproject.toml
.github/: changed-files.yml  dependabot.yml
.github/actions/dataloader-build/: action.yml
.github/actions/dataloader-cache/: action.yml
.github/actions/openvic-dl-build/: action.yml
.github/actions/openvic-dl-release/: action.yml
.github/workflows/: build-matrix.yml  builds.yml  releases.yml
include/openvic-dataloader/: AbstractSyntaxTree.hpp  DiagnosticLogger.hpp  Error.hpp  File.hpp  NodeLocation.hpp  ParseData.hpp  ParseError.hpp  ParseState.hpp  ParseWarning.hpp  Parser.hpp
include/openvic-dataloader/csv/: LineObject.hpp  Parser.hpp  ValueNode.hpp
include/openvic-dataloader/detail/: BasicParser.hpp  CallbackOStream.hpp  ClassExport.hpp  Concepts.hpp  Constexpr.hpp  Constexprs.hpp  Encoding.hpp  ErrorRange.hpp  HashAlgorithm.hpp  HashTable.hpp  LexyFwdDeclaration.hpp  LexyReportError.hpp  MemoryResource.hpp  OStreamOutputIterator.hpp  OptionalConstexpr.hpp  PointerHash.hpp  SelfType.hpp  SymbolIntern.hpp  TypeName.hpp  Utility.hpp  VectorConstexpr.hpp  pinned_vector.hpp
include/openvic-dataloader/detail/utility/: Concepts.hpp  Constexpr.hpp  ErrorRange.hpp  SelfType.hpp  TypeName.hpp  Utility.hpp
include/openvic-dataloader/v2script/: AbstractSyntaxTree.hpp  NodeLocationMap.hpp  Parser.hpp
src/headless/: main.cpp
src/openvic-dataloader/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.hpp  DiagnosticLogger.cpp  DiagnosticLogger.hpp  File.cpp  File.hpp  NodeLocation.cpp  ParseState.hpp
src/openvic-dataloader/csv/: CsvGrammar.hpp  CsvParseState.hpp  Grammar.inc  Parser.cpp  ValueNode.cpp
src/openvic-dataloader/detail/: BasicBufferHandler.hpp  BasicParser.cpp  BufferError.hpp  Convert.hpp  ConvertGbk.hpp  Detect.cpp  Detect.hpp  DetectUtf8.hpp  Errors.hpp  InternalConcepts.hpp  LexyLitRange.hpp  LexyReportError.hpp  NullBuff.hpp  OStreamOutputIterator.hpp  ParseHandler.cpp  ParseHandler.hpp  Parser.cpp  StringLiteral.hpp  Warnings.hpp  dsl.hpp
src/openvic-dataloader/v2script/: AbstractSyntaxTree.cpp  AiBehaviorGrammar.hpp  DecisionGrammar.hpp  EffectGrammar.hpp  EventGrammar.hpp  Grammar.cpp  LuaDefinesGrammar.hpp  ModifierGrammar.hpp  ParseState.hpp  Parser.cpp  SimpleGrammar.hpp  TriggerGrammar.hpp
tests/: CMakeLists.txt  SCsub
tests/src/: Error.cpp  Helper.hpp  NodeLocation.cpp
tests/src/csv/: LineObject.cpp  Parser.cpp
tests/src/detail/: SymbolIntern.cpp
tests/src/v2script/: AbstractSyntaxTree.cpp  Parser.cpp
tools/: dl_build.py  linux.py  macos.py  macos_osxcross.py  my_spawn.py  targets.py  windows.py
